[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/assets/hud/bar_blue.png" type="Texture" id=1]
[ext_resource path="res://src/assets/font/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/assets/hud/bar_red.png" type="Texture" id=3]
[ext_resource path="res://src/scripts/Hud.gd" type="Script" id=4]
[ext_resource path="res://src/nodes/ClassicGame.tscn" type="PackedScene" id=5]

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 8.0
margin_top = 32.0
margin_right = 56.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 2 )
text = "Heat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="HBoxContainer" parent="."]
margin_left = 64.0
margin_top = 16.0
margin_right = 1088.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="HealthBar"]
margin_right = 130.0
margin_bottom = 10.0
value = 100.0
texture_progress = ExtResource( 3 )

[node name="HeatBar" type="HBoxContainer" parent="."]
margin_left = 64.0
margin_top = 40.0
margin_right = 1088.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="HeatBar"]
margin_right = 130.0
margin_bottom = 10.0
value = 100.0
texture_progress = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = 896.0
margin_right = 1024.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 128, 128 )
handle_input_locally = false
render_target_update_mode = 3

[node name="ClassicGame" parent="ViewportContainer/Viewport" instance=ExtResource( 5 )]
